--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+        testApplicationId "sample.settings.gensagames.samplejetpackmvvm.tests"
+        // If set to 'true', enables the instrumentation class to start and stop profiling.
+        // If set to false (default), profiling occurs the entire time the instrumentation
+        // class is running.
+        testHandleProfiling true
+        // If set to 'true', indicates that the Android system should run the instrumentation
+        // class as a functional test. The default value is 'false'
+        testFunctionalTest true
     }
     buildTypes {
         release {
@@ -29,11 +39,23 @@ android {
     dataBinding {
         enabled = true
     }
+
+    testOptions {
+        // Changes the directory where Gradle saves test reports. By default, Gradle saves test reports
+        // in the path_to_your_project/module_name/build/outputs/reports/ directory.
+        // '$rootDir' sets the path relative to the root directory of the current project.
+        reportDir "$rootDir/test-reports"
+        // Changes the directory where Gradle saves test results. By default, Gradle saves test results
+        // in the path_to_your_project/module_name/build/outputs/test-results/ directory.
+        // '$rootDir' sets the path relative to the root directory of the current project.
+        resultsDir "$rootDir/test-results"
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.31"
     implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
 
     implementation 'androidx.core:core-ktx:1.2.0-alpha02'
@@ -43,19 +65,39 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "com.google.dagger:dagger:$dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
 
     implementation "com.google.dagger:dagger-android:$dagger2_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.31"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.thedeanda:lorem:2.1'
 
+    /********************************************************
+     * Testing
+     */
 
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+
+    /** Assertions */
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+    androidTestImplementation 'com.google.truth:truth:0.42'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    androidTestImplementation "com.google.dagger:dagger:$dagger2_version"
+    testImplementation "com.google.dagger:dagger:$dagger2_version"
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger2_version"
+    kaptTest "com.google.dagger:dagger-compiler:$dagger2_version"
+
+    androidTestImplementation "com.google.dagger:dagger-android:$dagger2_version"
+    testImplementation "com.google.dagger:dagger-android:$dagger2_version"
+    kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger2_version"
+    kaptTest "com.google.dagger:dagger-android-processor:$dagger2_version"
 }
