--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@
 
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
-    ext.dagger2_version = '2.17'
+    ext.kotlin_version = '1.3.40'
+    ext.dagger2_version = '2.19'
     ext.lifecycle_version = '1.1.1'
+    ext.espresso = '3.2.0'
 
     repositories {
         google()
@@ -14,8 +15,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
