--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,9 +89,9 @@ dependencies {
 
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso"
-    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
     testImplementation 'androidx.test:core:1.2.0'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-android:2.28.2'
 
     androidTestImplementation "com.google.dagger:dagger:$dagger2_version"
     testImplementation "com.google.dagger:dagger:$dagger2_version"
