--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: "androidx.navigation.safeargs.kotlin"
+
 
 android {
     compileSdkVersion 28
@@ -64,25 +66,38 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
 
+    /**
+     * Dagger
+     */
 
     implementation "com.google.dagger:dagger:$dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
 
     implementation "com.google.dagger:dagger-android:$dagger2_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.thedeanda:lorem:2.1'
 
-    /********************************************************
+    /**
+     * Navigation
+     */
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
+
+    /**
      * Testing
      */
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
 
-    /** Assertions */
+    /**
+     * Assertions
+     */
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
     androidTestImplementation 'com.google.truth:truth:0.42'
@@ -94,12 +109,12 @@ dependencies {
     testImplementation 'org.mockito:mockito-android:2.28.2'
 
     androidTestImplementation "com.google.dagger:dagger:$dagger2_version"
-    testImplementation "com.google.dagger:dagger:$dagger2_version"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger2_version"
+    testImplementation "com.google.dagger:dagger:$dagger2_version"
     kaptTest "com.google.dagger:dagger-compiler:$dagger2_version"
 
     androidTestImplementation "com.google.dagger:dagger-android:$dagger2_version"
-    testImplementation "com.google.dagger:dagger-android:$dagger2_version"
     kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger2_version"
+    testImplementation "com.google.dagger:dagger-android:$dagger2_version"
     kaptTest "com.google.dagger:dagger-android-processor:$dagger2_version"
 }
