--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="sample.settings.gensagames.samplejetpackmvvm">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="sample.settings.gensagames.samplejetpackmvvm">
 
     <application
-            android:name=".view.MainApplication"
+            android:name=".view.base.MainApplication"
             android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -11,7 +12,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".view.DetailActivity">
+        </activity>
         <activity
                 android:name=".view.MainActivity"
                 android:label="@string/app_name"
@@ -22,7 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
