--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@
 
 buildscript {
     ext.kotlin_version = '1.3.40'
-    ext.dagger2_version = '2.19'
+    ext.dagger2_version = '2.21'
     ext.lifecycle_version = '1.1.1'
     ext.espresso = '3.2.0'
+
+    ext.nav_version = "2.1.0-alpha05"
+    ext.nav_version_ktx = "2.1.0-alpha05"
 
     repositories {
         google()
@@ -15,6 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
