--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".view.DetailActivity">
+
+        <activity android:name=".view.DetailActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <activity
                 android:name=".view.MainActivity"
                 android:label="@string/app_name"
