--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.thedeanda:lorem:2.1'
 
     /**
      * Dagger
@@ -79,8 +81,6 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'com.thedeanda:lorem:2.1'
 
     /**
      * Navigation
@@ -89,24 +89,27 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
 
     /**
-     * Testing
-     */
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-
-    /**
-     * Assertions
+     * Tests Assertions
      */
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
     androidTestImplementation 'com.google.truth:truth:0.42'
 
+    /**
+     * Testing
+     */
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso"
     androidTestImplementation 'org.mockito:mockito-android:2.28.2'
     testImplementation 'androidx.test:core:1.2.0'
     testImplementation 'org.mockito:mockito-android:2.28.2'
+
+    /**
+     * Tests Dagger
+     */
 
     androidTestImplementation "com.google.dagger:dagger:$dagger2_version"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger2_version"
@@ -117,4 +120,8 @@ dependencies {
     kaptAndroidTest "com.google.dagger:dagger-android-processor:$dagger2_version"
     testImplementation "com.google.dagger:dagger-android:$dagger2_version"
     kaptTest "com.google.dagger:dagger-android-processor:$dagger2_version"
+    /**
+     * Other
+     */
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
