--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="sample.settings.gensagames.samplejetpackmvvm">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
             android:name=".view.base.MainApplication"
             android:allowBackup="false"
