--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="sample.settings.gensagames.samplejetpackmvvm">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
             android:name=".view.base.MainApplication"
@@ -16,11 +16,10 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name=".view.DetailActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+                android:name=".view.DetailActivity"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
-
         <activity
                 android:name=".view.MainActivity"
                 android:label="@string/app_name"
