--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             tools:ignore="GoogleAppIndexingWarning">
         <activity
                 android:name=".view.DetailActivity"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.Detail">
         </activity>
         <activity
                 android:name=".view.MainActivity"
