--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,29 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.thedeanda:lorem:2.1'
+
+    /**
+     * Litho
+     */
+    implementation "com.facebook.litho:litho-core:$litho"
+    implementation "com.facebook.litho:litho-widget:$litho"
+    annotationProcessor "com.facebook.litho:litho-processor:$litho"
+    implementation 'com.facebook.soloader:soloader:0.6.0'
+
+    compileOnly "com.facebook.litho:litho-sections-annotations:$litho"
+    kapt "com.facebook.litho:litho-sections-processor:$litho"
+
+    /**
+     * Litho Testing
+     */
+    implementation "com.facebook.litho:litho-fresco:$litho"
+    testImplementation "com.facebook.litho:litho-testing:$litho"
 
     /**
      * Dagger
