--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.dagger2_version = '2.21'
     ext.lifecycle_version = '1.1.1'
     ext.espresso = '3.2.0'
+    ext.litho = '0.29.0'
 
     ext.nav_version = "2.1.0-alpha05"
     ext.nav_version_ktx = "2.1.0-alpha05"
