--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
         // If set to 'true', indicates that the Android system should run the instrumentation
         // class as a functional test. The default value is 'false'
         testFunctionalTest true
+
+        multiDexEnabled true
     }
     compileOptions {
         targetCompatibility = "8"
@@ -59,6 +61,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "androidx.multidex:multidex:$multidex_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.40"
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
@@ -71,15 +74,30 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation 'com.thedeanda:lorem:2.1'
+
+    /**
+     * Image library
+     */
+    implementation 'com.facebook.fresco:fresco:2.0.0'
 
     /**
      * Litho
      */
     implementation "com.facebook.litho:litho-core:$litho"
     implementation "com.facebook.litho:litho-widget:$litho"
-    annotationProcessor "com.facebook.litho:litho-processor:$litho"
+    implementation "com.facebook.litho:litho-fresco:$litho"
+    kapt "com.facebook.litho:litho-processor:$litho"
     implementation 'com.facebook.soloader:soloader:0.6.0'
+
+    /**
+     * Litho Sections
+     */
+    implementation 'com.facebook.litho:litho-sections-core:0.29.0'
+    implementation 'com.facebook.litho:litho-sections-widget:0.29.0'
+    compileOnly 'com.facebook.litho:litho-sections-annotations:0.29.0'
+    kapt 'com.facebook.litho:litho-sections-processor:0.29.0'
 
     compileOnly "com.facebook.litho:litho-sections-annotations:$litho"
     kapt "com.facebook.litho:litho-sections-processor:$litho"
