--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 
 buildscript {
+    ext.multidex_version = "2.0.1"
     ext.kotlin_version = '1.3.40'
     ext.dagger2_version = '2.21'
     ext.lifecycle_version = '1.1.1'
