--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,17 +63,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.multidex:multidex:$multidex_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.40"
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.50'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation 'com.thedeanda:lorem:2.1'
 
@@ -89,7 +89,7 @@ dependencies {
     implementation "com.facebook.litho:litho-widget:$litho"
     implementation "com.facebook.litho:litho-fresco:$litho"
     kapt "com.facebook.litho:litho-processor:$litho"
-    implementation 'com.facebook.soloader:soloader:0.6.0'
+    implementation 'com.facebook.soloader:soloader:0.8.0'
 
     /**
      * Litho Sections
@@ -131,7 +131,7 @@ dependencies {
      */
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
-    androidTestImplementation 'com.google.truth:truth:0.42'
+    androidTestImplementation 'com.google.truth:truth:1.0'
 
     /**
      * Testing
@@ -161,6 +161,6 @@ dependencies {
     /**
      * Other
      */
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
 }
