--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@
 
 buildscript {
     ext.multidex_version = "2.0.1"
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.50'
     ext.dagger2_version = '2.21'
     ext.lifecycle_version = '1.1.1'
     ext.espresso = '3.2.0'
     ext.litho = '0.29.0'
 
     ext.nav_version = "2.1.0-alpha05"
-    ext.nav_version_ktx = "2.1.0-alpha05"
+    ext.nav_version_ktx = '2.2.0-alpha03'
 
     repositories {
         google()
@@ -18,7 +18,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
